Pulling Activity List
Displays pulled activity list

TODO: Submit and receive request