@@ -6,6 +6,7 @@ import android.content.res.AssetManager;
 import android.os.AsyncTask;
 import android.os.Bundle;
 import android.util.Log;
+import android.widget.Toast;
 
 import org.apache.http.HttpResponse;
 import org.apache.http.NameValuePair;
@@ -21,10 +22,15 @@ import org.apache.http.impl.client.DefaultHttpClient;
 import org.apache.http.message.BasicNameValuePair;
 import org.apache.http.protocol.BasicHttpContext;
 import org.apache.http.protocol.HttpContext;
+import org.xmlpull.v1.XmlPullParserException;
 
+import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.FileInputStream;
+import java.io.InputStream;
+import java.net.HttpURLConnection;
 import java.net.URI;
+import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -44,9 +50,9 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 		setContentView(R.layout.activity_signup);
 
 		mSignupFragment = new SignupFragment();
-		Bundle args = new Bundle();
-		args.putSerializable("list", getList());
-		mSignupFragment.setArguments(args);
+//		Bundle args = new Bundle();
+//		args.putSerializable("list", getList());
+//		mSignupFragment.setArguments(args);
 
 		if (savedInstanceState == null) {
 			getFragmentManager().beginTransaction()
@@ -60,16 +66,26 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 		for(SerializedCookie c : cookieArray) {
 			mCookieStore.addCookie(c.toCookie());
 		}
-
+		new WebConnection().execute("https://iodine.tjhsst.edu/api/eighth/list_activities/2829");
 	}
 
 	public void submit(int AID, int BID) {
+		this.BID = Integer.toString(BID);
+		this.AID = Integer.toString(AID);
+		new SignupRequest().execute("https://iodine.tjhsst.edu/api/eighth/signup_activity");
+	}
 
+	public void postSubmit(boolean result) {
+		if(result) {
+			Toast.makeText(getApplicationContext(), "Signed up!", Toast.LENGTH_SHORT).show();
+		} else {
+			Toast.makeText(getApplicationContext(), "Something went wrong...", Toast.LENGTH_SHORT).show();
+		}
 	}
 
 	private ArrayList<EighthActivityItem> getList() {
 		try {
-			return new EighthActivityXmlParser().parse(getApplicationContext().getAssets().open("testActivityList.xml"));
+			return new EighthActivityXmlParser().parse(getAssets().open("testActivityList.xml"));
 		} catch(Exception e) {
 			Log.e("hi", e.toString());
 		}
@@ -77,30 +93,77 @@ public class SignupActivity extends Activity implements SignupFragment.OnFragmen
 	}
 
 	// AsyncTask to handle contacting the server
-	private class WebConnection extends AsyncTask<String, Void, CookieStore> {
+	private class WebConnection extends AsyncTask<String, Void, ArrayList<EighthActivityItem>> {
 		private static final String TAG = "CONNECTION";
 
 		@Override
-		protected CookieStore doInBackground(String... urls) {
-			System.out.println("sending");
+		protected ArrayList<EighthActivityItem> doInBackground(String... urls) {
 			assert(urls.length == 1);
-			DefaultHttpClient client = new DefaultHttpClient();
+			HttpURLConnection urlConnection;
+			ArrayList<EighthActivityItem> response = null;
+			List<Cookie> cookies = mCookieStore.getCookies();
 			try {
-
-				HttpPost post = new HttpPost(new URI(urls[0]));
-
-				HttpResponse response = client.execute(post);
+				urlConnection = (HttpURLConnection) new URL(urls[0]).openConnection();
+				for(Cookie cookie : cookies) {
+					System.out.println(cookie.getName() + "=" + cookie.getValue());
+					urlConnection.setRequestProperty("Cookie", cookie.getName() + "=" + cookie.getValue());
+				}
+				urlConnection.connect();
+				response = new EighthActivityXmlParser().parse(urlConnection.getInputStream());
+				urlConnection.disconnect();
+			} catch (XmlPullParserException e) {
+				Log.e(TAG, "XML error.", e);
 			} catch (Exception e) {
 				Log.e(TAG, "Connection error.", e);
 			}
-			return client.getCookieStore();
+			return response;
 		}
 
 		@Override
-		protected void onPostExecute(CookieStore result) {
+		protected void onPostExecute(ArrayList<EighthActivityItem> result) {
 			super.onPostExecute(result);
-			List<Cookie> cookies = result.getCookies();
+			mSignupFragment.addAll(result);
+		}
+	}
 
+	// AsyncTask to handle contacting the server
+	private class SignupRequest extends AsyncTask<String, Void, Boolean> {
+		private static final String TAG = "CONNECTION";
+
+		@Override
+		protected Boolean doInBackground(String... urls) {
+			assert(urls.length == 1);
+			HttpURLConnection urlConnection;
+			List<Cookie> cookies = mCookieStore.getCookies();
+			boolean response;
+			try {
+				urlConnection = (HttpURLConnection) new URL(urls[0]).openConnection();
+				// Add cookies
+				for(Cookie cookie : cookies) {
+					System.out.println(cookie.getName() + "=" + cookie.getValue());
+					urlConnection.setRequestProperty("Cookie", cookie.getName() + "=" + cookie.getValue());
+				}
+				// Add parameters
+				urlConnection.addRequestProperty("Content-Type", "xml");
+				urlConnection.setRequestProperty("bid", BID);
+				urlConnection.setRequestProperty("aid", AID);
+
+				urlConnection.connect();
+				response = new EighthActivityXmlParser().parseSuccess(urlConnection.getInputStream());
+				urlConnection.disconnect();
+				return response;
+			} catch (XmlPullParserException e) {
+				Log.e(TAG, "XML error.", e);
+			} catch (Exception e) {
+				Log.e(TAG, "Connection error.", e);
+			}
+			return false;
+		}
+
+		@Override
+		protected void onPostExecute(Boolean result) {
+			super.onPostExecute(result);
+			postSubmit(result);
 		}
 	}
 }
